# invoice

./: .gitignore  Cargo.toml  README.md  diesel.toml  notes.md
.github/ISSUE_TEMPLATE/: user_story.md
.github/workflows/: rust.yml
migrations/2024-12-27-065927_owner_events/: down.sql  up.sql
src/: lib.rs  main.rs
src/adapter/: api.rs  mod.rs  owner.rs
src/adapter/owner/: controller.rs
src/adapter/owner/presenter/: cli.rs
src/adapter/shared/: mod.rs  present.rs
src/application/: mod.rs  owner.rs
src/application/owner/: repository.rs  use_cases.rs
src/application/owner/resource/: repository.rs
src/application/owner/use_cases/: add_resource.rs  create_owner.rs  read_all_resources.rs  remove_resource.rs  update_owner.rs
src/application/shared/: error.rs  mod.rs  use_case.rs
src/domain/: mod.rs  owner.rs
src/domain/owner/: command.rs  email.rs  event.rs  repository.rs  resource.rs  rules.rs
src/domain/owner/resource/: price.rs  repository.rs
src/domain/owner/rules/: owner_id_must_match.rs  owner_must_own_the_resource.rs  resource_is_must_be_unique.rs  resource_name_must_be_unique.rs
src/domain/shared/: aggregate.rs  entity.rs  error.rs  mod.rs  rule.rs
src/infrastructure/: persistence.rs
src/infrastructure/persistence/: in_memory.rs
src/infrastructure/persistence/sqlite/: model.rs  schema.rs
