[package]
name = "invoice"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "invoice"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.83"
mockall = "0.13.1"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
uuid = { version = "1.11.0", features = ["v7", "v8"] }
wasm-bindgen = "0.2.99"
